@@ -1,0 +1,14 @@
+"""``pytest`` configuration."""
+
+
+import pytest
+import rasterio
+
+
+with rasterio.Env() as env:
+    drivers = env.drivers()
+
+
+requires_webp = pytest.mark.skipif(
+    "WEBP" not in drivers.keys(), reason="Only relevant if WEBP drivers is supported"
+)
